--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import { RiHeart3Line } from "react-icons/ri";
 import siteInfo from "~/data/site-info";
 import Subscribe from "./Subscribe.astro";
 
@@ -61,10 +62,8 @@ const linkGroups: LinkGroup[] = [
   </div>
   <div class="content end">
     <div class="copyright">
-      <div>
-        {siteInfo.fullName} &copy; 2021&hairsp;&ndash;&hairsp;{year}. T4T always
-        &hearts;
-      </div>
+      {siteInfo.fullName} &copy; 2021&hairsp;&ndash;&hairsp;{year}
+      <RiHeart3Line /> T4T always
     </div>
     <div class="social">
       {
@@ -171,6 +170,9 @@ const linkGroups: LinkGroup[] = [
 
   .copyright {
     font-size: var(--step--1);
+    display: inline-flex;
+    align-items: center;
+    gap: var(--space-xs);
   }
 
   .social {
