feat: Hook up email subscription form to Mailcoach (#100)

--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -2,11 +2,20 @@
 import { RiArrowRightLine } from "react-icons/ri";
 ---
 
-<form>
+<form
+  action="https://namesake.mailcoach.app/subscribe/d21c197c-7919-45d5-b25a-29ee17cd538e"
+  method="post"
+>
   <strong>Get notified when we launch:</strong>
   <div class="input-group">
     <input type="email" name="email" placeholder="Your email" required />
     <button type="submit">Subscribe <RiArrowRightLine /></button>
+  </div>
+  <div hidden>
+    <label for="special">
+      If you are a human, do not fill in this field.
+    </label>
+    <input type="text" name="special" tabindex="-1" autocomplete="off" />
   </div>
 </form>
 
