fix: HIDPI partner logos

--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -22,6 +22,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
               src={partner.data.logo}
               alt={partner.data.name}
               height={partner.data.height}
+              densities={[1, 2]}
             />
           </a>
         </li>
