Add back T4T footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -57,8 +57,9 @@ const linkGroups: LinkGroup[] = [
     <div class="copyright">
       <span>{siteInfo.fullName} &copy; {year}</span>
       <span class="disclaimer"
-        ><RiHeart3Line />
-        <a href="https://notlegaladvice.law/">We’re not lawyers.</a></span
+        ><RiHeart3Line /> T4T. <a href="https://notlegaladvice.law/"
+          >We’re not lawyers.</a
+        ></span
       >
     </div>
     <div class="social">
