Use compile imageService

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import heroIllustration from "~/assets/hero-form.png";
+import heroIllustration from "~/assets/index/hero-form.png";
 import Partners from "~/components/Partners.astro";
 import { Content } from "~/content/pages/index.md";
 import siteInfo from "~/data/site-info";
