--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -91,6 +91,7 @@ const pageTitle = Astro.url.pathname === "/" ? title : `${title} · Namesake`;
       ]}
     />
     <script>
+      // @ts-ignore
       import * as Fathom from "fathom-client";
       Fathom.load("GQAJEJLZ");
     </script>
