Add horizontal divider

--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -37,7 +37,8 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
   const partners: HTMLElement | null = document.querySelector(".partners h2");
   if (partners) {
     const underline = annotate(partners, {
-      type: "underline",
+      type: "circle",
+      padding: 16,
       animate: false,
     });
     underline.show();
