--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
         src={heroIllustration}
         alt="Some snails and flowers on top of a court order document"
         class="illustration"
-        width={1200}
+        width={900}
         densities={[1, 2]}
       />
     </div>
@@ -52,7 +52,7 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
   .hero {
     padding-inline: var(--space-2xs);
     padding-block-start: var(--space-2xl);
-    margin-inline: calc(-1 * var(--space-l));
+    margin-inline: calc(-1 * var(--space-m));
     position: relative;
   }
 
